evaluation-run/591/k8s/validate/resources/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: microservice-demo
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ralfx22/md-api
          args:
            - serve
          ports:
            - containerPort: 50059
              protocol: TCP
